Fix z-index of magnifying glass

--- a/src/app/features/landing/pages/landing/landing.component.css
+++ b/src/app/features/landing/pages/landing/landing.component.css
@@ -201,7 +201,7 @@ section > div {
     position: absolute;
     pointer-events: none;
     opacity: 1;
-    z-index: 3;
+    z-index: 5;
     animation: grow 750ms cubic-bezier(0.68, 0, 0.27, 1) 0ms 1 normal none, tilt 8s cubic-bezier(.36,.07,.19,.97) infinite normal;
     animation-delay: 0s, 1s;
   }
